[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/ShelfGUI.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/Kenney Pixel.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Jajan Simulator Tilemap 3 for GUI.png" type="Texture" id=3]
[ext_resource path="res://Assets/ShelfGUI.png" type="Texture" id=4]
[ext_resource path="res://Assets/close_button.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="TileSet" id=2]
0/name = "Jajan Simulator Tilemap 3 for GUI.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 960, 0, 160, 160 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Jajan Simulator Tilemap 3 for GUI.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 1120, 0, 160, 160 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Jajan Simulator Tilemap 3 for GUI.png 2"
2/texture = ExtResource( 3 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 1280, 0, 160, 160 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "Jajan Simulator Tilemap 3 for GUI.png 3"
3/texture = ExtResource( 3 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 1440, 0, 160, 160 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "Jajan Simulator Tilemap 3 for GUI.png 4"
4/texture = ExtResource( 3 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 1600, 0, 160, 160 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "Jajan Simulator Tilemap 3 for GUI.png 5"
5/texture = ExtResource( 3 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 1760, 0, 160, 160 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "Jajan Simulator Tilemap 3 for GUI.png 6"
6/texture = ExtResource( 3 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 960, 160, 160, 160 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "Jajan Simulator Tilemap 3 for GUI.png 7"
7/texture = ExtResource( 3 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 1120, 160, 160, 160 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "Jajan Simulator Tilemap 3 for GUI.png 8"
8/texture = ExtResource( 3 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 1280, 160, 160, 160 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "Jajan Simulator Tilemap 3 for GUI.png 9"
9/texture = ExtResource( 3 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 1440, 160, 160, 160 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "Jajan Simulator Tilemap 3 for GUI.png 10"
10/texture = ExtResource( 3 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 1600, 160, 160, 160 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0
11/name = "Jajan Simulator Tilemap 3 for GUI.png 11"
11/texture = ExtResource( 3 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 1760, 160, 160, 160 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0
12/name = "Jajan Simulator Tilemap 3 for GUI.png 12"
12/texture = ExtResource( 3 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 960, 320, 160, 160 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape_one_way = false
12/shape_one_way_margin = 0.0
12/shapes = [  ]
12/z_index = 0
13/name = "Jajan Simulator Tilemap 3 for GUI.png 13"
13/texture = ExtResource( 3 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 1120, 320, 160, 160 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape_one_way = false
13/shape_one_way_margin = 0.0
13/shapes = [  ]
13/z_index = 0
14/name = "Jajan Simulator Tilemap 3 for GUI.png 14"
14/texture = ExtResource( 3 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 1280, 320, 160, 160 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shape_offset = Vector2( 0, 0 )
14/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
14/shape_one_way = false
14/shape_one_way_margin = 0.0
14/shapes = [  ]
14/z_index = 0
16/name = "Jajan Simulator Tilemap 3 for GUI.png 16"
16/texture = ExtResource( 3 )
16/tex_offset = Vector2( 0, 0 )
16/modulate = Color( 1, 1, 1, 1 )
16/region = Rect2( 1760, 320, 160, 160 )
16/tile_mode = 0
16/occluder_offset = Vector2( 0, 0 )
16/navigation_offset = Vector2( 0, 0 )
16/shape_offset = Vector2( 0, 0 )
16/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
16/shape_one_way = false
16/shape_one_way_margin = 0.0
16/shapes = [  ]
16/z_index = 0
17/name = "Jajan Simulator Tilemap 3 for GUI.png 17"
17/texture = ExtResource( 3 )
17/tex_offset = Vector2( 0, 0 )
17/modulate = Color( 1, 1, 1, 1 )
17/region = Rect2( 960, 480, 160, 160 )
17/tile_mode = 0
17/occluder_offset = Vector2( 0, 0 )
17/navigation_offset = Vector2( 0, 0 )
17/shape_offset = Vector2( 0, 0 )
17/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
17/shape_one_way = false
17/shape_one_way_margin = 0.0
17/shapes = [  ]
17/z_index = 0
18/name = "Jajan Simulator Tilemap 3 for GUI.png 18"
18/texture = ExtResource( 3 )
18/tex_offset = Vector2( 0, 0 )
18/modulate = Color( 1, 1, 1, 1 )
18/region = Rect2( 1120, 480, 160, 160 )
18/tile_mode = 0
18/occluder_offset = Vector2( 0, 0 )
18/navigation_offset = Vector2( 0, 0 )
18/shape_offset = Vector2( 0, 0 )
18/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
18/shape_one_way = false
18/shape_one_way_margin = 0.0
18/shapes = [  ]
18/z_index = 0
19/name = "Jajan Simulator Tilemap 3 for GUI.png 19"
19/texture = ExtResource( 3 )
19/tex_offset = Vector2( 0, 0 )
19/modulate = Color( 1, 1, 1, 1 )
19/region = Rect2( 1280, 480, 160, 160 )
19/tile_mode = 0
19/occluder_offset = Vector2( 0, 0 )
19/navigation_offset = Vector2( 0, 0 )
19/shape_offset = Vector2( 0, 0 )
19/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
19/shape_one_way = false
19/shape_one_way_margin = 0.0
19/shapes = [  ]
19/z_index = 0
20/name = "Jajan Simulator Tilemap 3 for GUI.png 20"
20/texture = ExtResource( 3 )
20/tex_offset = Vector2( 0, 0 )
20/modulate = Color( 1, 1, 1, 1 )
20/region = Rect2( 960, 640, 160, 160 )
20/tile_mode = 0
20/occluder_offset = Vector2( 0, 0 )
20/navigation_offset = Vector2( 0, 0 )
20/shape_offset = Vector2( 0, 0 )
20/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
20/shape_one_way = false
20/shape_one_way_margin = 0.0
20/shapes = [  ]
20/z_index = 0
21/name = "Jajan Simulator Tilemap 3 for GUI.png 21"
21/texture = ExtResource( 3 )
21/tex_offset = Vector2( 0, 0 )
21/modulate = Color( 1, 1, 1, 1 )
21/region = Rect2( 1440, 320, 160, 160 )
21/tile_mode = 0
21/occluder_offset = Vector2( 0, 0 )
21/navigation_offset = Vector2( 0, 0 )
21/shape_offset = Vector2( 0, 0 )
21/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
21/shape_one_way = false
21/shape_one_way_margin = 0.0
21/shapes = [  ]
21/z_index = 0
22/name = "Jajan Simulator Tilemap 3 for GUI.png 22"
22/texture = ExtResource( 3 )
22/tex_offset = Vector2( 0, 0 )
22/modulate = Color( 1, 1, 1, 1 )
22/region = Rect2( 1600, 320, 160, 160 )
22/tile_mode = 0
22/occluder_offset = Vector2( 0, 0 )
22/navigation_offset = Vector2( 0, 0 )
22/shape_offset = Vector2( 0, 0 )
22/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
22/shape_one_way = false
22/shape_one_way_margin = 0.0
22/shapes = [  ]
22/z_index = 0

[sub_resource type="DynamicFont" id=4]
size = 31
font_data = ExtResource( 2 )

[node name="ShelfGUI" type="Control"]
anchor_right = 0.263
anchor_bottom = 0.373
margin_right = -269.312
margin_bottom = -223.8
grow_vertical = 2
rect_scale = Vector2( 0.7, 0.7 )
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="ShelfGui" type="Sprite" parent="."]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )
centered = false
offset = Vector2( 3.05176e-05, 0 )

[node name="ItemName1" type="Label" parent="."]
margin_left = 102.857
margin_top = 34.2857
margin_right = 226.857
margin_bottom = 58.2857
grow_horizontal = 2
rect_pivot_offset = Vector2( 0, -3.8147e-06 )
custom_colors/font_color = Color( 0.607843, 0.392157, 0.231373, 1 )
custom_fonts/font = SubResource( 3 )
text = "Corned Beef"

[node name="ItemName2" type="Label" parent="."]
margin_left = 102.857
margin_top = 110.0
margin_right = 226.857
margin_bottom = 134.0
grow_horizontal = 2
custom_colors/font_color = Color( 0.607843, 0.392157, 0.231373, 1 )
custom_fonts/font = SubResource( 3 )
text = "Corned Beef"

[node name="ItemName3" type="Label" parent="."]
margin_left = 102.857
margin_top = 187.143
margin_right = 226.857
margin_bottom = 211.143
grow_horizontal = 2
custom_colors/font_color = Color( 0.607843, 0.392157, 0.231373, 1 )
custom_fonts/font = SubResource( 3 )
text = "Corned Beef"

[node name="ItemQty1" type="Label" parent="."]
margin_left = 294.286
margin_top = 34.2857
margin_right = 316.286
margin_bottom = 58.2857
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0.607843, 0.392157, 0.231373, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="ItemQty2" type="Label" parent="."]
margin_left = 294.286
margin_top = 110.286
margin_right = 316.286
margin_bottom = 134.286
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0.607843, 0.392157, 0.231373, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="ItemQty3" type="Label" parent="."]
margin_left = 294.286
margin_top = 187.286
margin_right = 316.286
margin_bottom = 211.286
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0.607843, 0.392157, 0.231373, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="PlusButton1" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 331.0
margin_top = 34.0
margin_right = 356.0
margin_bottom = 63.0

[node name="PlusButton2" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 331.0
margin_top = 110.0
margin_right = 356.0
margin_bottom = 139.0

[node name="PlusButton3" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 331.0
margin_top = 186.0
margin_right = 356.0
margin_bottom = 215.0

[node name="MinusButton1" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 251.0
margin_top = 38.0
margin_right = 277.0
margin_bottom = 58.0

[node name="MinusButton2" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 251.0
margin_top = 113.0
margin_right = 277.0
margin_bottom = 133.0

[node name="MinusButton3" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 251.0
margin_top = 190.0
margin_right = 277.0
margin_bottom = 210.0

[node name="AddToCartButton" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 131.0
margin_top = 263.0
margin_right = 252.0
margin_bottom = 304.0

[node name="CloseButton" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 366.0
margin_top = -9.0
margin_right = 394.0
margin_bottom = 24.0

[node name="ItemImage" type="TileMap" parent="."]
position = Vector2( 12, 12 )
scale = Vector2( 0.4, 0.4 )
tile_set = SubResource( 2 )
cell_size = Vector2( 2, 2 )
format = 1

[node name="Label" type="Label" parent="."]
margin_left = 137.143
margin_top = 268.571
margin_right = 249.143
margin_bottom = 292.571
custom_colors/font_color = Color( 1, 0.8, 0.65098, 1 )
custom_fonts/font = SubResource( 4 )
text = "Add to Cart"

[node name="CloseButton2" type="Sprite" parent="."]
position = Vector2( 380, 7.14286 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 5 )

[connection signal="pressed" from="PlusButton1" to="." method="_on_PlusButton1_pressed"]
[connection signal="pressed" from="PlusButton2" to="." method="_on_PlusButton2_pressed"]
[connection signal="pressed" from="PlusButton3" to="." method="_on_PlusButton3_pressed"]
[connection signal="pressed" from="MinusButton1" to="." method="_on_MinusButton1_pressed"]
[connection signal="pressed" from="MinusButton2" to="." method="_on_MinusButton2_pressed"]
[connection signal="pressed" from="MinusButton3" to="." method="_on_MinusButton3_pressed"]
[connection signal="pressed" from="AddToCartButton" to="." method="_on_AddToCartButton_pressed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_CloseButton_pressed"]
